--- a/charts.html
+++ b/charts.html
@@ -5,7 +5,7 @@
     <title>Графики</title>
     <style>
         body {
-            background-color: #222;
+            background-color: #303030;
             color: #fff;
             font-family: Arial, sans-serif;
             margin: 0;
@@ -28,7 +28,7 @@
         }
 
         select {
-            background-color: #333;
+            background-color: #444;
             border: 1px solid #fff;
             border-radius: 5px;
             padding: 8px;
@@ -91,8 +91,8 @@
             <option value="Регрессия">Регрессия</option>
             <option value="Пузырьковый">Пузырьковый</option>
             <option value="Тепловая карта">Тепловая карта</option>
-            <option value="Спектральный">Спектральный</option>
-            <option value="Риск и Доходность">Риск и Доходность</option>
+<!--            <option value="Спектральный">Спектральный</option>-->
+<!--            <option value="Риск и Доходность">Риск и Доходность</option>-->
         </select>
         <br>
         <input type="submit" value="Показать график">
@@ -122,15 +122,15 @@
                     [0.6, 0.7, 1.0, -0.1, -0.3],
                     [-0.2, -0.3, -0.1, 1.0, 0.9],
                     [-0.4, -0.5, -0.3, 0.9, 1.0]
-                ],
-                "Спектральный": [10, 15, 20, 25, 30, 35, 40, 45],
-                "Риск и Доходность": [
-                    { x: 10, y: 5 },
-                    { x: 15, y: 7 },
-                    { x: 20, y: 8 },
-                    { x: 25, y: 9 },
-                    { x: 30, y: 12 }
                 ]
+//                "Спектральный": [10, 15, 20, 25, 30, 35, 40, 45],
+//                "Риск и Доходность": [
+//                    { x: 10, y: 5 },
+//                    { x: 15, y: 7 },
+//                    { x: 20, y: 8 },
+//                    { x: 25, y: 9 },
+//                    { x: 30, y: 12 }
+//                ]
             },
             Ford: {
                 Выручка: [151.80, 156.78, 160.34, 155.90, 127.14, 136.34, 158.06, 174.23],
@@ -138,7 +138,7 @@
                 Капитализация: [48.20, 49.61, 31.14, 37.96, 34.97, 83.00, 46.75, 48.79],
                 "p/e": [10.7, 4.61, 8.46, 439.8, -27.4, 4.62, -21.7, 11.2],
                 Пузырьковый: [
-                     { x: 127.14, y: -1.28, r: 34.97 },
+                    { x: 127.14, y: -1.28, r: 34.97 },
                     { x: 136.34, y: 17.94, r: 83.00 },
                     { x: 158.06, y: -1.98, r: 46.75 },
                     { x: 174.23, y: 6.16, r: 48.79 }
@@ -149,15 +149,15 @@
                     [0.6, 0.7, 1.0, -0.1, -0.3],
                     [-0.2, -0.3, -0.1, 1.0, 0.9],
                     [-0.4, -0.5, -0.3, 0.9, 1.0]
-                ],
-                "Спектральный": [10, 15, 20, 25, 30, 35, 40, 45],
-                "Риск и Доходность": [
-                    { x: 10, y: 5 },
-                    { x: 15, y: 7 },
-                    { x: 20, y: 8 },
-                    { x: 25, y: 9 },
-                    { x: 30, y: 12 }
                 ]
+//                "Спектральный": [10, 15, 20, 25, 30, 35, 40, 45],
+//                "Риск и Доходность": [
+//                    { x: 10, y: 5 },
+//                    { x: 15, y: 7 },
+//                    { x: 20, y: 8 },
+//                    { x: 25, y: 9 },
+//                    { x: 30, y: 12 }
+//                ]
             },
             Toyota: {
                Выручка: [255.08, 265.12, 272.55, 274.70, 256.60, 279.24, 274.17, 297.96],
@@ -165,7 +165,7 @@
                 Капитализация: [197.39, 191.03, 165.27, 196.93, 215.71, 252.84, 186.35, 247.48],
                 "p/e": [7.47, 9.7, 8.45, 10.3, 0.0981, 1.12, 9.58, 10.2],
                 Пузырьковый: [
-                   { x: 249.75, y: 14.30, r: 215.23 },
+                    { x: 249.75, y: 14.30, r: 215.23 },
                     { x: 256.72, y: 24.11, r: 252.23 },
                     { x: 276.20, y: 23.94, r: 200.00 },
                     { x: 303.73, y: 22.49, r: 225.00 }
@@ -176,15 +176,15 @@
                     [0.6, 0.7, 1.0, -0.1, -0.3],
                     [-0.2, -0.3, -0.1, 1.0, 0.9],
                     [-0.4, -0.5, -0.3, 0.9, 1.0]
-                ],
-                "Спектральный": [10, 15, 20, 25, 30, 35, 40, 45],
-                "Риск и Доходность": [
-                    { x: 10, y: 5 },
-                    { x: 15, y: 7 },
-                    { x: 20, y: 8 },
-                    { x: 25, y: 9 },
-                    { x: 30, y: 12 }
                 ]
+//                "Спектральный": [10, 15, 20, 25, 30, 35, 40, 45],
+//                "Риск и Доходность": [
+//                    { x: 10, y: 5 },
+//                    { x: 15, y: 7 },
+//                    { x: 20, y: 8 },
+//                    { x: 25, y: 9 },
+//                    { x: 30, y: 12 }
+//                ]
             },
             VG: {
                 Выручка: [217.27, 229.55, 235.85, 252.63, 222.88, 250.20, 279.23, 311.34],
@@ -203,15 +203,15 @@
                     [0.6, 0.7, 1.0, -0.1, -0.3],
                     [-0.2, -0.3, -0.1, 1.0, 0.9],
                     [-0.4, -0.5, -0.3, 0.9, 1.0]
-                ],
-                "Спектральный": [10, 15, 20, 25, 30, 35, 40, 45],
-                "Риск и Доходность": [
-                    { x: 10, y: 5 },
-                    { x: 15, y: 7 },
-                    { x: 20, y: 8 },
-                    { x: 25, y: 9 },
-                    { x: 30, y: 12 }
                 ]
+//                "Спектральный": [10, 15, 20, 25, 30, 35, 40, 45],
+//                "Риск и Доходность": [
+//                    { x: 10, y: 5 },
+//                    { x: 15, y: 7 },
+//                    { x: 20, y: 8 },
+//                    { x: 25, y: 9 },
+//                    { x: 30, y: 12 }
+//                ]
             },
             GM: {
                 Выручка: [149.18, 145.59, 147.05, 137.24, 122.48, 127.00, 156.74, 171.97],
@@ -230,15 +230,15 @@
                     [0.6, 0.7, 1.0, -0.1, -0.3],
                     [-0.2, -0.3, -0.1, 1.0, 0.9],
                     [-0.4, -0.5, -0.3, 0.9, 1.0]
-                ],
-                "Спектральный": [10, 15, 20, 25, 30, 35, 40, 45],
-                "Риск и Доходность": [
-                    { x: 10, y: 5 },
-                    { x: 15, y: 7 },
-                    { x: 20, y: 8 },
-                    { x: 25, y: 9 },
-                    { x: 30, y: 12 }
                 ]
+//                "Спектральный": [10, 15, 20, 25, 30, 35, 40, 45],
+//                "Риск и Доходность": [
+//                    { x: 10, y: 5 },
+//                    { x: 15, y: 7 },
+//                    { x: 20, y: 8 },
+//                    { x: 25, y: 9 },
+//                    { x: 30, y: 12 }
+//                ]
             }, 
             GEELY: {
                 Выручка: [62.77, 106.96, 126.26, 110.44, 103.51, 122.46, 172.06, 183.51],
@@ -246,7 +246,7 @@
                 Капитализация: [98.52, 112.32, 105.82, 114.21, 126.72, 273.61, 192.12, 108.5],
                 "p/e": [88.7, 148.2, 63.8, 118.9, 248.8, 276.8, 154.2, 147.2],
                 Пузырьковый: [
-                     { x: 16.7, y: 1.8, r: 12.0 },
+                    { x: 16.7, y: 1.8, r: 12.0 },
                     { x: 19.3, y: 2.0, r: 12.5 },
                     { x: 21.2, y: 2.1, r: 13.0 },
                     { x: 22.0, y: 2.2, r: 13.5 }
@@ -257,15 +257,15 @@
                     [0.6, 0.7, 1.0, -0.1, -0.3],
                     [-0.2, -0.3, -0.1, 1.0, 0.9],
                     [-0.4, -0.5, -0.3, 0.9, 1.0]
-                ],
-                "Спектральный": [10, 15, 20, 25, 30, 35, 40, 45],
-                "Риск и Доходность": [
-                    { x: 10, y: 5 },
-                    { x: 15, y: 7 },
-                    { x: 20, y: 8 },
-                    { x: 25, y: 9 },
-                    { x: 30, y: 12 }
                 ]
+//                "Спектральный": [10, 15, 20, 25, 30, 35, 40, 45],
+//                "Риск и Доходность": [
+//                    { x: 10, y: 5 },
+//                    { x: 15, y: 7 },
+//                    { x: 20, y: 8 },
+//                    { x: 25, y: 9 },
+//                    { x: 30, y: 12 }
+//                ]
             }, 
             NIO: {
                Выручка: [0.44, 0.71, 0.75, 1.13, 2.36, 5.60, 7.32, 7.70],
@@ -284,15 +284,15 @@
                     [0.6, 0.7, 1.0, -0.1, -0.3],
                     [-0.2, -0.3, -0.1, 1.0, 0.9],
                     [-0.4, -0.5, -0.3, 0.9, 1.0]
-                ],
-                "Спектральный": [10, 15, 20, 25, 30, 35, 40, 45],
-                "Риск и Доходность": [
-                    { x: 10, y: 5 },
-                    { x: 15, y: 7 },
-                    { x: 20, y: 8 },
-                    { x: 25, y: 9 },
-                    { x: 30, y: 12 }
                 ]
+//                "Спектральный": [10, 15, 20, 25, 30, 35, 40, 45]
+//                "Риск и Доходность": [
+//                    { x: 10, y: 5 },
+//                    { x: 15, y: 7 },
+//                    { x: 20, y: 8 },
+//                    { x: 25, y: 9 },
+//                    { x: 30, y: 12 }
+//                ]
             } 
             // Добавить остальные компании аналогичным образом
         };
@@ -441,39 +441,39 @@
                         }
                     }
                 });
-            } else if (metric === 'Риск и Доходность') {
-                // Пример для графика риска и доходности
-                new Chart(ctx, {
-                    type: 'scatter',
-                    data: {
-                        datasets: [{
-                            label: company + ' - Риск и Доходность',
-                            data: data,
-                            backgroundColor: 'rgba(153, 102, 255, 0.2)',
-                            borderColor: 'rgba(153, 102, 255, 1)',
-                            borderWidth: 1
-                        }]
-                    },
-                    options: {
-                        scales: {
-                            x: {
-                                type: 'linear',
-                                position: 'bottom',
-                                title: {
-                                    display: true,
-                                    text: 'Риск'
-                                }
-                            },
-                            y: {
-                                beginAtZero: true,
-                                title: {
-                                    display: true,
-                                    text: 'Доходность'
-                                }
-                            }
-                        }
-                    }
-                });
+//            } else if (metric === 'Риск и Доходность') {
+//                // Пример для графика риска и доходности
+//                new Chart(ctx, {
+//                    type: 'scatter',
+//                    data: {
+//                        datasets: [{
+//                            label: company + ' - Риск и Доходность',
+//                            data: data,
+//                            backgroundColor: 'rgba(153, 102, 255, 0.2)',
+//                            borderColor: 'rgba(153, 102, 255, 1)',
+//                            borderWidth: 1
+//                        }]
+//                    },
+//                    options: {
+//                        scales: {
+//                            x: {
+//                                type: 'linear',
+//                                position: 'bottom',
+//                                title: {
+//                                    display: true,
+//                                    text: 'Риск'
+//                                }
+//                            },
+//                            y: {
+//                                beginAtZero: true,
+//                                title: {
+//                                    display: true,
+//                                    text: 'Доходность'
+//                                }
+//                            }
+//                        }
+//                    }
+//                });
             } else {
                 // Пример для остальных графиков (столбчатый или линейный график)
                 chartType = (metric === 'Капитализация') ? 'line' : 'bar';
