--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <meta name="description" content="Описание страницы" />
     <style>
         body {
-            background-color: #303030;
-            color: #fff;
+            background-color: #fafafa;
+            color: #303030;
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
@@ -33,7 +33,7 @@
             justify-content: center;
         }
         nav a {
-            color: #fff;
+            color: #333;
             text-decoration: none;
             padding: 10px 20px;
             margin: 0 10px;
