--- a/comparison.html
+++ b/comparison.html
@@ -4,119 +4,128 @@
     <meta charset="UTF-8">
     <title>Сравнение компаний</title>
     <style>
-        body {
-            background-color: #303030;
-            color: #fff;
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
+       body {
+    background-color: #fafafa;
+    color: #303030;
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+}
 
-        h1 {
-            text-align: center;
-        }
+header {
+    background-color: #444; /* Темный цвет для шапки */
+    color: #fafafa; /* Светлый текст в шапке */
+    padding: 10px 0;
+    text-align: center;
+    margin-bottom: 20px;
+}
 
-        form {
-            text-align: center;
-            margin-top: 50px;
-        }
+h1 {
+    text-align: center;
+}
 
-        label, select {
-            color: #fff;
-            font-size: 18px;
-            margin-right: 10px;
-        }
+form {
+    text-align: center;
+    margin-top: 50px;
+}
 
-        select {
-            background-color: #444;
-            border: 1px solid #fff;
-            border-radius: 5px;
-            padding: 8px;
-            color: #fff;
-        }
+label, select {
+    color: #303030;
+    font-size: 18px;
+    margin-right: 10px;
+}
 
-        canvas {
-            border: 1px solid #fff;
-            border-radius: 5px;
-            max-width: 100%;
-            max-height: 100%;
-        }
+select {
+    background-color: #fafafa; /* Светлый фон для окна выбора */
+    border: 1px solid #303030;
+    border-radius: 5px;
+    padding: 8px;
+    color: #303030; /* Темный текст в окне выбора */
+}
 
-        input[type="submit"] {
-            background-color: transparent;
-            border: 2px solid #fff;
-            color: white;
-            padding: 10px 20px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            margin-top: 20px;
-            cursor: pointer;
-            border-radius: 10px;
-            transition: background-color 0.3s ease;
-        }
+canvas {
+    border: 1px solid #303030;
+    border-radius: 5px;
+    max-width: 100%;
+    max-height: 100%;
+}
 
-        input[type="submit"]:hover {
-            background-color: #555;
-        }
+input[type="submit"] {
+    background-color: #fafafa; /* Светлый фон для кнопки */
+    border: 2px solid #303030;
+    color: #303030; /* Темный текст для кнопки */
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin-top: 20px;
+    cursor: pointer;
+    border-radius: 10px;
+    transition: background-color 0.3s ease;
+}
 
-        #result {
-            margin-top: 50px;
-            text-align: center;
-        }
-        
-        
+input[type="submit"]:hover {
+    background-color: #c9c9c9; /* Цвет кнопки при наведении */
+}
 
-        table {
-            margin: 0 auto;
-            border-collapse: collapse;
-            width: 70%; /* Установим ширину таблицы на 70% экрана */
-        }
+#result {
+    margin-top: 50px;
+    text-align: center;
+}
 
-        th, td {
-            border: 1px solid #fff;
-            padding: 10px;
-            font-weight: bold; /* Сделаем текст жирным */
-            text-align: center;
-        }
+table {
+    margin: 0 auto;
+    border-collapse: collapse;
+    width: 70%; /* Установим ширину таблицы на 70% экрана */
+}
 
-        th {
-            background-color: #444;
-        }
+th, td {
+    border: 1px solid #303030;
+    padding: 10px;
+    font-weight: bold; /* Сделаем текст жирным */
+    text-align: center;
+}
 
-        @media only screen and (max-width: 768px) { 
-            body {
-                font-size: 13px;
-            }
-            header {
-                padding: 5px 0;
-            }
-            nav {
-                flex-direction: column;
-            }
-            nav a {
-                margin: 5px 0;
-                display: block;
-                width: 100%;
-            }
-            main {
-                padding: 10px;
-            }
-            .swiper-container {
-                max-width: 100%;
-            }
-            .swiper-slide section {
-                margin: 0;
-            }
-            .tradingview-widget-container__widget {
-                width: 100%;
-            }
-        }
+th {
+    background-color: #c9c9c9;
+}
+
+@media only screen and (max-width: 768px) { 
+    body {
+        font-size: 13px;
+    }
+    header {
+        padding: 5px 0;
+    }
+    nav {
+        flex-direction: column;
+    }
+    nav a {
+        margin: 5px 0;
+        display: block;
+        width: 100%;
+    }
+    main {
+        padding: 10px;
+    }
+    .swiper-container {
+        max-width: 100%;
+    }
+    .swiper-slide section {
+        margin: 0;
+    }
+    .tradingview-widget-container__widget {
+        width: 100%;
+    }
+}
     </style>
 </head>
 <body>
-    <h1>Сравнение компаний</h1>
+    <header>
+        <h1>Сравнение компаний</h1>
+    </header>
+
     <form id="comparisonForm">
         <label for="metric">Что сравниваем:</label>
         <select id="comparison_metric" name="comparison_metric"></select>
@@ -128,7 +137,7 @@
             <option value="Прибыль">Прибыль</option>
             <option value="P/E">P/E</option>
             <option value="Капитализация">Капитализация</option>
-            <option value="roe">roe</option>
+            <option value="ROE">ROE</option>
             <option value="P/S">P/S</option>
             <option value="Все сразу">Все сразу</option>
         </select>
@@ -145,7 +154,7 @@
                 Прибыль: [-0.67, -1.96, -0.97, -0.87, -0.69, 5.52, 12.58, 10.79],
                 Капитализация: [36.1, 57.3, 52.7, 113.23, 763.57, 1061.35, 389.68, 789.84],
                 "P/E": [-53.6, -29.2, -53.9, -95.8, 913.1, 188.6, 30.6, 52.6],
-                roe: [-11.41, -34.8, -15.5, -10.7, 2.9, 17.5, 27.4],
+                ROE: [-11.41, -34.8, -15.5, -10.7, 2.9, 17.5, 27.4],
                 "P/S": [4.4, 4.39, 2.64, 3.02, 24.23, 22.17, 5.25, 8.26]
             },
             Ford: {
@@ -153,7 +162,7 @@
                 Прибыль: [4.60, 7.73, 3.68, 0.05, -1.28, 17.94, -1.98, 6.16],
                 Капитализация: [48.20, 49.61, 31.14, 37.96, 34.97, 83.00, 46.75, 48.79],
                 "P/E": [10.7, 4.61, 8.46, 439.8, -27.4, 4.62, -21.7, 11.2],
-                roe: [15.7, 21.6, 10.2, 0.14, -4.2, 36.9, -4.5],
+                ROE: [15.7, 21.6, 10.2, 0.14, -4.2, 36.9, -4.5],
                 "P/S": [0.32, 0.32, 0.19, 0.24, 0.27, 0.61, 0.3, 0.28]
             },
             Toyota: {
@@ -161,7 +170,7 @@
                 Прибыль: [16.91, 22.50, 16.98, 18.73, 21.17, 25.36, 18.09, 27.69],
                 Капитализация: [197.39, 191.03, 165.27, 196.93, 215.71, 252.84, 186.35, 247.48],
                 "P/E": [7.47, 9.7, 8.45, 10.3, 0.0981, 1.12, 9.58, 10.2],
-                roe: [10, 12, 9.1, 9.5, 9.6, 11.3, 8.2],
+                ROE: [10, 12, 9.1, 9.5, 9.6, 11.3, 8.2],
                 "P/S": [0.65, 0.74, 0.63, 0.62, 0.86, 0.9, 0.71, 0.84]
             },
             NIO: {
@@ -169,7 +178,7 @@
                 Прибыль: [-0.38, -0.74, -1.46, -1.65, -0.81, 1.64, 2.16, 3.03],
                 Капитализация: [0.1, 0.2, 4.0, 54.23, 36.57, 17.35, 13.68, 9.84],
                 "P/E": [0, -0.0467, -0.329, -0.373, -10.2, -8.94, -30.2, -27.1],
-                roe: [-218, -59, -122, 238, -16.9, -27.5, -54.2],
+                ROE: [-218, -59, -122, 238, -16.9, -27.5, -54.2],
                 "P/S": [0, 0, 2.83, 3.66, 24.5, 8.9, 2.2, 1.7]
             },
             GM: {
@@ -177,7 +186,7 @@
                 Прибыль: [9.437, 0.04, 8.08, 6.73, 6.43, 10.02, 9.93, 10.02],
                 Капитализация: [53.1, 58.22, 46.83, 51.24, 59.59, 85.12, 47.79, 49.19],
                 "P/E": [5.93, -16.2, 6.88, 7.05, 11.3, 7.64, 5.69, 5.2],
-                roe: [21.4, 0.01, 18.9, 14.6, 12.9, 15.2, 13.7],
+                ROE: [21.4, 0.01, 18.9, 14.6, 12.9, 15.2, 13.7],
                 "P/S": [0.37, 0.42, 0.33, 0.38, 0.49, 0.68, 0.31, 0.29]
             },
             VG: {
@@ -185,7 +194,7 @@
                 Прибыль: [5.14, 11.18, 11.83, 13.35, 8.33, 14.84, 14.87, 13.96],
                 Капитализация: [60.5, 80.3, 98.7, 67.5, 86.5, 90.4, 121.3, 75.2],
                 "P/E": [191, 8.3, 5.9, 12.9, 5.45, 3.9, 5.2, 4.6],
-                roe: [23.4, 12.3, 16.7, 13.1, 17.5, 15.2, 14.7],
+                ROE: [23.4, 12.3, 16.7, 13.1, 17.5, 15.2, 14.7],
                 "P/S": [0.54, 0.47, 0.41, 0.36, 0.62, 0.43, 0.54, 0.52]
             },
             Geely: {
@@ -193,7 +202,7 @@
                 Прибыль: [5.97, 12.26, 14.87, 9.29, 6.06, 5.69, 5.96, 5.78],
                 Капитализация: [98.52, 112.32, 105.82, 114.21, 126.72, 273.61, 192.12, 108.5],
                 "P/E": [88.7, 148.2, 63.8, 118.9, 248.8, 276.8, 154.2, 147.2],
-                roe: [21.7, 19.3, 28.7, 16.1, 8.4, 6.9, 7.2],
+                ROE: [21.7, 19.3, 28.7, 16.1, 8.4, 6.9, 7.2],
                 "P/S": [1.05, 2.32, 1, 1.27, 2.45, 1.72, 0.67, 0.45]
             }
         };
