--- a/data.html
+++ b/data.html
@@ -5,61 +5,62 @@
   <title>Данные для анализа</title>
   <style>
     body {
-      background-color: #303030;
-      color: #fff;
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-    }
-    header {
-      background-color: #444;
-      padding: 10px 0;
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    main {
-      padding: 20px;
-    }
-    table {
-      border-collapse: collapse;
-      width: 80%;
-      margin: 20px auto;
-      background-color: #222;
-    }
-    th, td {
-      border: 1px solid #fff;
-      padding: 8px;
-      text-align: center;
-      background-color: #222;
-      color: #fff;
-    }
-    th {
-      background-color: #333;
-    }
-    tr:nth-child(even) {
-      background-color: #444;
-    }
-    tr:hover {
-      background-color: #555;
-    }
-    .filters {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    .filters select {
-      padding: 10px;
-      margin: 10px;
-      font-size: 1em;
-      border-radius: 5px;
-      border: 1px solid #555;
-      background-color: #333;
-      color: #fff;
-    }
-    .selected-company {
-      text-align: center;
-      margin: 20px;
-      font-size: 1.2em;
-    }
+  background-color: #fafafa;
+  color: #303030;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+header {
+  background-color: #444; /* Темный цвет для шапки */
+  color: #fafafa; /* Светлый текст в шапке */
+  padding: 10px 0;
+  text-align: center;
+  margin-bottom: 20px;
+}
+main {
+  padding: 20px;
+}
+table {
+  border-collapse: collapse;
+  width: 80%;
+  margin: 20px auto;
+  background-color: #222;
+}
+th, td {
+  border: 1px solid #222;
+  padding: 8px;
+  text-align: center;
+  background-color: #fff;
+  color: #222;
+}
+th {
+  background-color: #bfbfbf;
+}
+tr:nth-child(even) {
+  background-color: #c9c9c9;
+}
+tr:hover {
+  background-color: #d1d1d1;
+}
+.filters {
+  text-align: center;
+  margin-bottom: 20px;
+}
+.filters select {
+  padding: 10px;
+  margin: 10px;
+  font-size: 1em;
+  border-radius: 5px;
+  border: 1px solid #222;
+  background-color: #fafafa; /* Светлый фон для окна выбора */
+  color: #303030; /* Темный текст в окне выбора */
+}
+.selected-company {
+  text-align: center;
+  margin: 20px;
+  font-size: 1.2em;
+}
   </style>
 </head>
 <body>
