--- a/charts.html
+++ b/charts.html
@@ -129,8 +129,8 @@ input[type="submit"]:hover {
                 "P/S": [4.4, 4.39, 2.64, 3.02, 24.23, 22.17, 5.25, 8.26],
                 "P/B": [7.3, 12.4, 11.7, 11.4, 30.5, 36.16, 8.72, 13.97],
                 "P/CF": [0, 0, 27.05, 30.86, 128.59, 103.78, 29.07, 67.60],
-                ROE: [-11.41, -34.8, -15.5, -10.7, 2.9, 17.5, 27.4],
-                ROA: [-2.98, -6.85, -3.28, -2.53, 1.32, 8.88, 15.27],
+                ROE: [-11.41, -34.8, -15.5, -10.7, 2.9, 17.5, 27.4, 29.42],
+                ROA: [-2.98, -6.85, -3.28, -2.53, 1.32, 8.88, 15.27, 9.33],
                 "OCF": [-0.12, -0.06, 2.09, 2.45, 5.94, 11.49, 14.72, 13.25],
                 "QR": [14.10, 16.01, 19.14, 20.56, 22.51, 21.83, 17.45, 19.72],
                 Пузырьковый: [
@@ -155,8 +155,8 @@ input[type="submit"]:hover {
                 "P/S": [0.32, 0.32, 0.19, 0.24, 0.27, 0.61, 0.3, 0.28],
                 "P/B": [1.7, 1.4, 0.9, 1.1, 1.2, 1.7, 1.1, 1.1],
                 "P/CF": [2.45, 2.76, 2.04, 2.11, 1.44, 5.31, 6.81, 3.52],
-                ROE: [15.7, 21.6, 10.2, 0.14, -4.2, 36.9, -4.5],
-                ROA: [1.93, 2.99, 1.43, 0.02, -0.48, 6,97, -0.77],
+                ROE: [15.7, 21.6, 10.2, 0.14, -4.2, 36.9, -4.5, 2.31],
+                ROA: [1.93, 2.99, 1.43, 0.02, -0.48, 6,97, -0.77, -1.12],
                 "OCF": [19.79, 18.10, 15.02, 17.64, 24.27, 15.79, 6.85, 13.60],
                 "QR": [2.18, 2.26, 2.14, 2.09, 2.25, 2.17, 2.30, 2.14],
                 Пузырьковый: [
@@ -181,8 +181,8 @@ input[type="submit"]:hover {
                 "P/S": [0.65, 0.74, 0.63, 0.62, 0.86, 0.9, 0.71, 0.84],
                 "P/B": [1.0, 1.1, 1.0, 0.9, 1.0, 1.2, 0.9, 1.2],
                 "P/CF": [5.26, 5.14, 5.07, 7.74, 8.62, 7.56, 8.87, 9.82],
-                ROE: [10, 12, 9.1, 9.5, 9.6, 11.3, 8.2],
-                ROA: [3.86, 4.75, 3.61, 3.74, 3.75, 4.54, 3.24],
+                ROE: [10, 12, 9.1, 9.5, 9.6, 11.3, 8.2, 9.15],
+                ROA: [3.86, 4.75, 3.61, 3.74, 3.75, 4.54, 3.24, 4.05],
                 "OCF": [28.23, 21.60, 26.64, 23.83, 22.72, 17.26, 23.56, 18.73],
                 "QR": [1.92, 1.94, 1.96, 1.91, 1.86, 2.12, 2.15, 2.06],
                 Пузырьковый: [
@@ -207,8 +207,8 @@ input[type="submit"]:hover {
                 "P/S": [0.54, 0.47, 0.41, 0.36, 0.62, 0.43, 0.54, 0.52],
                 "P/B": [0.7, 0.6, 0.6, 0.7, 0.5, 0.9, 0.5, 0.4],
                 "P/CF": [3.65, 4.12, 4.43, 3.76, 3.26, 4.17, 3.65, 2.96],
-                ROE: [23.4, 12.3, 16.7, 13.1, 17.5, 15.2, 14.7],
-                ROA: [2.69, 2.71, 2.90, 1.88, 2.89, 2.74, 2.89],
+                ROE: [23.4, 12.3, 16.7, 13.1, 17.5, 15.2, 14.7, 15.6],
+                ROA: [2.69, 2.71, 2.90, 1.88, 2.89, 2.74, 2.89, 2.54],
                 "OCF": [23.33, 19.63, 22.65, 19.83, 21.34, 22.64, 19.43, 18.12],
                 "QR": [3.14, 2.63, 2.85, 2.11, 2.25, 2.07, 2.32, 2.17],
                 Пузырьковый: [
@@ -233,8 +233,8 @@ input[type="submit"]:hover {
                 "P/S": [0.37, 0.42, 0.33, 0.38, 0.49, 0.68, 0.31, 0.29],
                 "P/B": [1.2, 1.6, 1.2, 1.2, 1.3, 1.5, 0.7, 0.7],
                 "P/CF": [3.29, 3.53, 3.14, 3.51, 3.60, 3.67, 3.05, 2.20],
-                ROE: [21.4, 0.01, 18.9, 14.6, 12.9, 15.2, 13.7],
-                ROA: [4.25, 0.01, 3.54, 2.95, 2.73, 4.09, 3.24],
+                ROE: [21.4, 0.01, 18.9, 14.6, 12.9, 15.2, 13.7, 14.3],
+                ROA: [4.25, 0.01, 3.54, 2.95, 2.73, 4.09, 3.24, 3.32],
                 "OCF": [16.60, 17.31, 15.26, 15.02, 16.67, 15.19, 16.04, 22.90],
                 "QR": [3.20, 2.54, 2.36, 1.99, 2.17, 2.42, 2.57, 2.08],
                 Пузырьковый: [
@@ -259,8 +259,8 @@ input[type="submit"]:hover {
                 "P/S": [1.05, 2.32, 1, 1.27, 2.45, 1.72, 0.67, 0.45],
                 "P/B": [2.4, 5.9, 2.4, 2.5, 3.6, 2.7, 1.4, 1.0],
                 "P/CF": [6.80, 17.94, 7.61, 9.75, 135.44, 10.56, 5.85, 4.22],
-                ROE: [21.7, 19.3, 28.7, 16.1, 8.4, 6.9, 7.2],
-                ROA: [7.91, 12.01, 14.25, 7.69, 4.61, 3.46, 3.36],
+                ROE: [21.7, 19.3, 28.7, 16.1, 8.4, 6.9, 7.2, 7.1],
+                ROA: [7.91, 12.01, 14.25, 7.69, 4.61, 3.46, 3.36, 3.34],
                 "OCF": [1.43, 1.97, 2.12, 2.04, 0.4, 2.85, 2.94, 2.88],
                 "QR": [271.49, 40.75, 31.02, 1364.64, 1665.55, 30.75, 29.92, 32.25],
                 Пузырьковый: [
@@ -285,8 +285,8 @@ input[type="submit"]:hover {
                 "P/S": [0, 0, 2.83, 3.66, 24.5, 8.9, 2.2, 1.7],
                 "P/B": [0, 0, 6.7, 0, 17.9, 7.9, 4.7, 6.0],
                 "P/CF": [0, 0, 0, 0, 0, 0, 0, 0],
-                ROE: [-218, -59, -122, 238, -16.9, -27.5, -54.2],
-                ROA: [-130.01, -45.52, -53.28, -78.94, -9.72, -12.61, -15.58],
+                ROE: [-218, -59, -122, 238, -16.9, -27.5, -54.2, -36.2],
+                ROA: [-130.01, -45.52, -53.28, -78.94, -9.72, -12.61, -15.58, -11.34],
                 "OCF": [-0.33, -0.67, -1.2, -1.26, 0.28, 0.30, -0.57, 0.0],
                 "QR": [44.64, 106.66, 5.91, 2.65, 18.45, 7.86, 9.34, 12.28],
                 Пузырьковый: [
