--- a/comparison.html
+++ b/comparison.html
@@ -160,8 +160,8 @@ th {
                 Прибыль: [-0.67, -1.96, -0.97, -0.87, -0.69, 5.52, 12.58, 10.79],
                 Капитализация: [36.1, 57.3, 52.7, 113.23, 763.57, 1061.35, 389.68, 789.84],
                 "P/E": [-53.6, -29.2, -53.9, -95.8, 913.1, 188.6, 30.6, 52.6],
-                ROE: [-11.41, -34.8, -15.5, -10.7, 2.9, 17.5, 27.4],
-                ROA: [-2.98, -6.85, -3.28, -2.53, 1.32, 8.88, 15.27],
+                ROE: [-11.41, -34.8, -15.5, -10.7, 2.9, 17.5, 27.4, 29.42],
+                ROA: [-2.98, -6.85, -3.28, -2.53, 1.32, 8.88, 15.27, 9.33],
                 "P/S": [4.4, 4.39, 2.64, 3.02, 24.23, 22.17, 5.25, 8.26],
                 "P/CF": [0, 0, 27.05, 30.86, 128.59, 103.78, 29.07, 67.60],
                 "OCF": [-0.12, -0.06, 2.09, 2.45, 5.94, 11.49, 14.72, 13.25],
@@ -173,8 +173,8 @@ th {
                 Прибыль: [4.60, 7.73, 3.68, 0.05, -1.28, 17.94, -1.98, 6.16],
                 Капитализация: [48.20, 49.61, 31.14, 37.96, 34.97, 83.00, 46.75, 48.79],
                 "P/E": [10.7, 4.61, 8.46, 439.8, -27.4, 4.62, -21.7, 11.2],
-                ROE: [15.7, 21.6, 10.2, 0.14, -4.2, 36.9, -4.5],
-                ROA: [1.93, 2.99, 1.43, 0.02, -0.48, 6,97, -0.77],
+                ROE: [15.7, 21.6, 10.2, 0.14, -4.2, 36.9, -4.5, 2.31],
+                ROA: [1.93, 2.99, 1.43, 0.02, -0.48, 6,97, -0.77, -1.12],
                 "P/S": [0.32, 0.32, 0.19, 0.24, 0.27, 0.61, 0.3, 0.28],
                 "P/CF": [2.45, 2.76, 2.04, 2.11, 1.44, 5.31, 6.81, 3.52],
                 "OCF": [19.79, 18.10, 15.02, 17.64, 24.27, 15.79, 6.85, 13.60],
@@ -186,8 +186,8 @@ th {
                 Прибыль: [16.91, 22.50, 16.98, 18.73, 21.17, 25.36, 18.09, 27.69],
                 Капитализация: [197.39, 191.03, 165.27, 196.93, 215.71, 252.84, 186.35, 247.48],
                 "P/E": [7.47, 9.7, 8.45, 10.3, 0.0981, 1.12, 9.58, 10.2],
-                ROE: [10, 12, 9.1, 9.5, 9.6, 11.3, 8.2],
-                ROA: [3.86, 4.75, 3.61, 3.74, 3.75, 4.54, 3.24],
+                ROE: [10, 12, 9.1, 9.5, 9.6, 11.3, 8.2, 9.15],
+                ROA: [3.86, 4.75, 3.61, 3.74, 3.75, 4.54, 3.24, 4.05],
                 "P/S": [0.65, 0.74, 0.63, 0.62, 0.86, 0.9, 0.71, 0.84],
                 "P/CF": [5.26, 5.14, 5.07, 7.74, 8.62, 7.56, 8.87, 9.82],
                 "OCF": [28.23, 21.60, 26.64, 23.83, 22.72, 17.26, 23.56, 18.73],
@@ -199,8 +199,8 @@ th {
                 Прибыль: [-0.38, -0.74, -1.46, -1.65, -0.81, 1.64, 2.16, 3.03],
                 Капитализация: [0.1, 0.2, 4.0, 54.23, 36.57, 17.35, 13.68, 9.84],
                 "P/E": [0, -0.0467, -0.329, -0.373, -10.2, -8.94, -30.2, -27.1],
-                ROE: [-218, -59, -122, 238, -16.9, -27.5, -54.2],
-                ROA: [-130.01, -45.52, -53.28, -78.94, -9.72, -12.61, -15.58],
+                ROE: [-218, -59, -122, 238, -16.9, -27.5, -54.2, -36.2],
+                ROA: [-130.01, -45.52, -53.28, -78.94, -9.72, -12.61, -15.58, -11.34],
                 "P/S": [0, 0, 2.83, 3.66, 24.5, 8.9, 2.2, 1.7],
                 "P/CF": [0, 0, 0, 0, 0, 0, 0, 0],
                 "OCF": [-0.33, -0.67, -1.2, -1.26, 0.28, 0.30, -0.57, 0.0],
@@ -212,8 +212,8 @@ th {
                 Прибыль: [9.437, 0.04, 8.08, 6.73, 6.43, 10.02, 9.93, 10.02],
                 Капитализация: [53.1, 58.22, 46.83, 51.24, 59.59, 85.12, 47.79, 49.19],
                 "P/E": [5.93, -16.2, 6.88, 7.05, 11.3, 7.64, 5.69, 5.2],
-                ROE: [21.4, 0.01, 18.9, 14.6, 12.9, 15.2, 13.7],
-                ROA: [4.25, 0.01, 3.54, 2.95, 2.73, 4.09, 3.24],
+                ROE: [21.4, 0.01, 18.9, 14.6, 12.9, 15.2, 13.7, 14.3],
+                ROA: [4.25, 0.01, 3.54, 2.95, 2.73, 4.09, 3.24, 3.32],
                 "P/S": [0.37, 0.42, 0.33, 0.38, 0.49, 0.68, 0.31, 0.29],
                 "P/CF": [3.29, 3.53, 3.14, 3.51, 3.60, 3.67, 3.05, 2.20],
                 "OCF": [16.60, 17.31, 15.26, 15.02, 16.67, 15.19, 16.04, 22.90],
@@ -225,8 +225,8 @@ th {
                 Прибыль: [5.14, 11.18, 11.83, 13.35, 8.33, 14.84, 14.87, 13.96],
                 Капитализация: [60.5, 80.3, 98.7, 67.5, 86.5, 90.4, 121.3, 75.2],
                 "P/E": [191, 8.3, 5.9, 12.9, 5.45, 3.9, 5.2, 4.6],
-                ROE: [23.4, 12.3, 16.7, 13.1, 17.5, 15.2, 14.7],
-                ROA: [2.69, 2.71, 2.90, 1.88, 2.89, 2.74, 2.89],
+                ROE: [23.4, 12.3, 16.7, 13.1, 17.5, 15.2, 14.7, 15.6],
+                ROA: [2.69, 2.71, 2.90, 1.88, 2.89, 2.74, 2.89, 2.54],
                 "P/S": [0.54, 0.47, 0.41, 0.36, 0.62, 0.43, 0.54, 0.52],
                 "P/CF": [3.65, 4.12, 4.43, 3.76, 3.26, 4.17, 3.65, 2.96],
                 "OCF": [23.33, 19.63, 22.65, 19.83, 21.34, 22.64, 19.43, 18.12],
@@ -238,8 +238,8 @@ th {
                 Прибыль: [5.97, 12.26, 14.87, 9.29, 6.06, 5.69, 5.96, 5.78],
                 Капитализация: [98.52, 112.32, 105.82, 114.21, 126.72, 273.61, 192.12, 108.5],
                 "P/E": [88.7, 148.2, 63.8, 118.9, 248.8, 276.8, 154.2, 147.2],
-                ROE: [21.7, 19.3, 28.7, 16.1, 8.4, 6.9, 7.2],
-                ROA: [7.91, 12.01, 14.25, 7.69, 4.61, 3.46, 3.36],
+                ROE: [21.7, 19.3, 28.7, 16.1, 8.4, 6.9, 7.2, 7.1],
+                ROA: [7.91, 12.01, 14.25, 7.69, 4.61, 3.46, 3.36, 3.34],
                 "P/S": [1.05, 2.32, 1, 1.27, 2.45, 1.72, 0.67, 0.45],
                 "P/CF": [6.80, 17.94, 7.61, 9.75, 135.44, 10.56, 5.85, 4.22],
                 "OCF": [1.43, 1.97, 2.12, 2.04, 0.4, 2.85, 2.94, 2.88],
